完善资源管理通知钉钉和二维码功能
